test/cli/test-generating-policy/template/generate-cm-interpolated/generated-resource.yaml
apiVersion: v1
data:
  KAFKA_ADDRESS: 192.168.10.13:9092,192.168.10.14:9092,192.168.10.15:9092
  ZK_ADDRESS: 192.168.10.10:2181,192.168.10.11:2181,192.168.10.12:2181
kind: ConfigMap
metadata:
  name: test-ns-config
  namespace: test-ns
  labels:
    team: platform
    env: test
